--- a/cryptotrack/package.json
+++ b/cryptotrack/package.json
@@ -3,19 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.2.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@nivo/core": "^0.67.0",
+    "@reactchartjs/react-chart.js": "^1.0.0-rc.3",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "auth0-js": "^9.14.0",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
+    "dotenv": "^8.2.0",
+    "netlify-identity-widget": "^1.9.1",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-use-auth": "^2.0.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
